--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - "3306:3306"
 
   backend:
-    build: ./backend
+    build: ./Backend
     ports:
       - "5000:5000"
     environment:
@@ -24,7 +24,7 @@ services:
       - mysql
 
   frontend:
-    build: ./frontend
+    build: ./Frontend
     ports:
       - "3000:80"
     depends_on:
