Made the Capital letters of Backend and Frontend again 1

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,10 +22,10 @@ jobs:
 
     - name: Build and Push Backend
       run: |
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/backend ./backend
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/backend ./Backend
         docker push ${{ secrets.DOCKER_USERNAME }}/backend
 
     - name: Build and Push Frontend
       run: |
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/frontend ./frontend
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/frontend ./Frontend
         docker push ${{ secrets.DOCKER_USERNAME }}/frontend
