--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -1,9 +1,11 @@
-FROM node:18
+FROM node:18 as builder
 WORKDIR /app
-COPY . .
+COPY package*.json ./
 RUN npm install
+COPY . .
 RUN npm run build
-# Serve with NGINX
+
 FROM nginx:alpine
-COPY --from=0 /app/build /usr/share/nginx/html
+COPY --from=builder /app/build /usr/share/nginx/html
 EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
