--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -1,11 +1,15 @@
+# Stage 1: Build Vite app
 FROM node:18 as builder
 WORKDIR /app
+
 COPY package*.json ./
 RUN npm install
+
 COPY . .
 RUN npm run build
 
+# Stage 2: Serve with NGINX
 FROM nginx:alpine
-COPY --from=builder /app/build /usr/share/nginx/html
+COPY --from=builder /app/dist /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
