--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,12 @@
     "@mantine/carousel": "^8.1.2",
     "@mantine/modals": "^8.1.2",
     "@mantine/notifications": "^8.1.2",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@tiptap/extension-bullet-list": "^2.11.5",
     "@tiptap/extension-color": "^2.11.5",
     "@tiptap/extension-highlight": "^2.11.5",
@@ -24,18 +30,24 @@
     "@tiptap/extension-underline": "^2.11.5",
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
-    "axios": "^1.7.9",
+    "axios": "^1.10.0",
     "bootstrap": "^5.3.3",
+    "cheerio": "^1.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dompurify": "^3.2.5",
+    "express": "^5.1.0",
     "framer-motion": "^12.19.2",
     "he": "^1.2.0",
+    "lucide-react": "^0.525.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.1.5",
-    "router-dom": "^3.0.1"
+    "router-dom": "^3.0.1",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
@@ -52,6 +64,7 @@
     "globals": "^15.14.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
+    "tw-animate-css": "^1.3.5",
     "vite": "^6.1.0"
   }
 }
